src/snapshots/gh_stack__status__tests__snapshot_status_mixed.snap
---
source: src/status.rs
expression: output
---
* feature-2 (current) #124 - Add new feature
| [? N Y N]
|
o feature-1 #123 - Setup base
| [Y Y N Y]
|
o main
