src/snapshots/gh_stack__status__tests__snapshot_status_no_checks.snap
---
source: src/status.rs
expression: output
---
* feature-2 (current) #124 - Add new feature
|
o feature-1 #123 - Setup base
|
o main
