src/snapshots/gh_stack__status__tests__snapshot_status_unicode.snap
---
source: src/status.rs
expression: output
---
◉ feature-1 (current) #123 - Add feature
│ [✓ ✗ ⏳ ─]
│
◯ main
