src/snapshots/gh_stack__status__tests__snapshot_status_with_draft.snap
---
source: src/status.rs
expression: output
---
* wip-feature (current) #125 - Work in progress (draft)
| [? N Y N]
|
o feature-1 #123 - Setup base
| [Y Y Y Y]
|
o main
